Update application menu items and add new translations for project sections

--- a/src/utils/locales/en.json
+++ b/src/utils/locales/en.json
@@ -115,5 +115,10 @@
   "design-gallery": "Design Gallery",
   "our-design-header": "Our Design Header",
   "our-design": "Our Design",
-  "our-design-images": "Our Design Images"
+  "our-design-images": "Our Design Images",
+  "project-section": "Project Section",
+  "behind-vision-header": "Behind Vision Header",
+  "behind-vision": "Behind Vision",
+  "interior-image": "Interior Image",
+  "exterior-image": "Exterior Image"
 }
